--- a/styles/parciales/_generals.scss
+++ b/styles/parciales/_generals.scss
@@ -10,4 +10,17 @@
     height: 43.98px;
     left: 123px;
     top: 6px;
+    justify-content: center;
+    align-items: center;
+}
+ 
+.title{
+    background-color: #E3C3C2;
+    position: absolute;
+width: 360px;
+height: 56px;
+left: 0px;
+top: 96px;
+text-align: center;
+justify-content: center;
 }
