--- a/styles/main.css
+++ b/styles/main.css
@@ -11,6 +11,25 @@
   height: 43.98px;
   left: 123px;
   top: 6px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.title {
+  background-color: #E3C3C2;
+  position: absolute;
+  width: 360px;
+  height: 56px;
+  left: 0px;
+  top: 96px;
+  text-align: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 body {
