--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,3 +1,4 @@
 @import "../styles/parciales/generals";
+@import "../styles/parciales/index";
 @import "../styles/parciales/comoComprar";
 @import "../styles/parciales/products";
