--- a/styles/main.css
+++ b/styles/main.css
@@ -7,7 +7,7 @@
 
 nav {
   position: absolute;
-  width: 360px;
+  max-width: 360px;
   height: 56px;
   margin-left: 0px;
   background-color: linear-gradient(0deg, #FFFFFF, #FFFFFF), #FFF9F2;
@@ -16,44 +16,63 @@ nav {
 }
 
 #logo {
-  position: absolute;
   width: 114px;
   height: 43.98px;
   margin-left: 123px;
   margin-top: 6px;
-}
-
-.title {
-  background-color: #E3C3C2;
-  position: absolute;
-  width: 360px;
-  height: 56px;
-  margin-left: 0px;
-  top: 96px;
-  text-align: center;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
 }
 
-body {
-  min-width: 360px;
-  height: 704px;
-  margin-left: 0px;
-  overflow-y: scroll;
-  background: #FFFFFF;
+.card-title {
+  width: 133px;
+  height: 8px;
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 98%;
+  letter-spacing: 0.203125px;
+  color: #FFFFFF;
 }
 
-main {
-  margin-top: 80px;
+.card-text {
+  width: 133px;
+  height: 8px;
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 8px;
+  line-height: 102%;
+  letter-spacing: 0.101562px;
+  color: #FFFFFF;
+}
+
+.card {
+  width: 140px;
+  height: 30vh;
+  background: -webkit-gradient(linear, left bottom, left top, from(#E3C3C2), to(#E3C3C2)), #FFFBFE;
+  background: linear-gradient(0deg, #E3C3C2, #E3C3C2), #FFFBFE;
+  -webkit-box-shadow: 0px 0.40625px 0.8125px rgba(0, 0, 0, 0.3), 0px 0.8125px 2.4375px 0.8125px rgba(0, 0, 0, 0.15);
+          box-shadow: 0px 0.40625px 0.8125px rgba(0, 0, 0, 0.3), 0px 0.8125px 2.4375px 0.8125px rgba(0, 0, 0, 0.15);
+  border-radius: 4.875px;
+}
+
+.card-img-top {
+  width: 100%;
+  height: 20vh;
+  margin-left: 0px;
+  margin-top: 0px;
+  border-radius: 4.88px;
 }
 
 .portada {
   position: absolute;
   width: 328px;
-  height: 496px;
+  height: 70vh;
   margin-left: 16px;
-  margin-top: 16px;
+  margin-top: 72px;
   border-radius: 4px;
 }
 
@@ -62,38 +81,39 @@ main {
   width: 360px;
   height: 48px;
   margin-left: 0px;
-  margin-top: 528px;
+  margin-top: 584px;
   background: #A9C3B4;
-}
-
-.card {
-  width: 158px;
-  height: 35vh;
-  background: -webkit-gradient(linear, left bottom, left top, from(#E3C3C2), to(#E3C3C2)), #FFFBFE;
-  background: linear-gradient(0deg, #E3C3C2, #E3C3C2), #FFFBFE;
-  -webkit-box-shadow: 0px 0.40625px 0.8125px rgba(0, 0, 0, 0.3), 0px 0.8125px 2.4375px 0.8125px rgba(0, 0, 0, 0.15);
-          box-shadow: 0px 0.40625px 0.8125px rgba(0, 0, 0, 0.3), 0px 0.8125px 2.4375px 0.8125px rgba(0, 0, 0, 0.15);
-  border-radius: 4.875px;
 }
 
 .productos_index {
   position: absolute;
-  margin-top: 600px;
-  margin-left: 16px;
-  margin-right: 16px;
+  margin-top: 628px;
+  margin-left: 8px;
+  margin-right: 8px;
   max-width: 328px;
 }
 
-.card-img-top {
-  width: 158px;
-  height: 136px;
-  margin-left: 0px;
-  margin-top: 0px;
-  border-radius: 4.88px;
-}
-
-body {
-  margin-top: 50px;
+.prim_ver {
+  position: absolute;
+  width: 328px;
+  height: 48px;
+  padding: 20px;
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 24px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  color: #FFFF;
 }
 
 .filtro {
