--- a/styles/main.css
+++ b/styles/main.css
@@ -7,50 +7,50 @@
 
 nav {
   position: absolute;
-  max-width: 360px;
-  height: 56px;
-  margin-left: 0px;
+  width: 100%;
+  height: 3.5rem;
+  margin-left: 0rem;
   background-color: linear-gradient(0deg, #FFFFFF, #FFFFFF), #FFF9F2;
   -webkit-box-shadow: 0px 0.87379px 1.74757px rgba(0, 0, 0, 0.3), 0px 1.74757px 5.24272px 1.74757px rgba(0, 0, 0, 0.15);
           box-shadow: 0px 0.87379px 1.74757px rgba(0, 0, 0, 0.3), 0px 1.74757px 5.24272px 1.74757px rgba(0, 0, 0, 0.15);
 }
 
 #logo {
-  width: 114px;
-  height: 43.98px;
-  margin-left: 123px;
-  margin-top: 6px;
+  width: 7.125rem;
+  height: 2.749rem;
+  margin-left: 7.688rem;
+  margin-top: 0.375rem;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
 }
 
 .card-title {
-  width: 133px;
-  height: 8px;
+  width: 8.313rem;
+  height: 0.5rem;
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 400;
-  font-size: 10px;
+  font-size: 0.625rem;
   line-height: 98%;
   letter-spacing: 0.203125px;
   color: #FFFFFF;
 }
 
 .card-text {
-  width: 133px;
-  height: 8px;
+  width: 8.313rem;
+  height: 0.5rem;
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 400;
-  font-size: 8px;
+  font-size: 0.5rem;
   line-height: 102%;
   letter-spacing: 0.101562px;
   color: #FFFFFF;
 }
 
 .card {
-  width: 140px;
+  width: 8.75rem;
   height: 30vh;
   background: -webkit-gradient(linear, left bottom, left top, from(#E3C3C2), to(#E3C3C2)), #FFFBFE;
   background: linear-gradient(0deg, #E3C3C2, #E3C3C2), #FFFBFE;
@@ -69,40 +69,40 @@ nav {
 
 .portada {
   position: absolute;
-  width: 328px;
-  height: 70vh;
-  margin-left: 16px;
-  margin-top: 72px;
-  border-radius: 4px;
+  width: 20.5rem;
+  height: 31rem;
+  margin-left: 1rem;
+  margin-top: 4.5rem;
+  border-radius: 0.25rem;
 }
 
 .subtitulo {
   position: absolute;
-  width: 360px;
-  height: 48px;
-  margin-left: 0px;
-  margin-top: 584px;
+  width: 22.5rem;
+  height: 3rem;
+  margin-left: 0rem;
+  margin-top: 36.5rem;
   background: #A9C3B4;
 }
 
 .productos_index {
   position: absolute;
-  margin-top: 628px;
-  margin-left: 8px;
-  margin-right: 8px;
-  max-width: 328px;
+  margin-top: 39.25rem;
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+  width: 100%;
 }
 
 .prim_ver {
   position: absolute;
-  width: 328px;
-  height: 48px;
-  padding: 20px;
+  width: 100%;
+  height: 3rem;
+  padding: 1.25rem;
   font-family: 'Montserrat';
   font-style: normal;
   font-weight: 400;
-  font-size: 20px;
-  line-height: 24px;
+  font-size: 2rem;
+  line-height: 1.5rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -113,7 +113,7 @@ nav {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  color: #FFFF;
+  color: black;
 }
 
 .filtro {
