--- a/styles/parciales/_generals.scss
+++ b/styles/parciales/_generals.scss
@@ -6,18 +6,18 @@
 
 nav{
     position: absolute;
-    max-width: 360px;
-    height: 56px;
-    margin-left: 0px;
+    width: 100%;
+    height: 3.5rem;
+    margin-left: 0rem;
     background-color: linear-gradient(0deg, #FFFFFF, #FFFFFF), #FFF9F2;
     box-shadow: 0px 0.873786px 1.74757px rgba(0, 0, 0, 0.3), 0px 1.74757px 5.24272px 1.74757px rgba(0, 0, 0, 0.15);
 }
 
 #logo{
-    width: 114px;
-    height: 43.98px;
-    margin-left: 123px;
-    margin-top: 6px;
+    width: 7.125rem;
+    height: 2.749rem;
+    margin-left: 7.688rem;
+    margin-top: 0.375rem;
     justify-content: center;
 }    
 
@@ -35,12 +35,12 @@ nav{
 
 
 .card-title{
-    width: 133px;
-height: 8px;
+    width: 8.313rem;
+height: 0.5rem;
 font-family: 'Roboto';
 font-style: normal;
 font-weight: 400;
-font-size: 10px;
+font-size: 0.625rem;
 line-height: 98%;
 letter-spacing: 0.203125px;
 color: #FFFFFF;
@@ -48,19 +48,19 @@ color: #FFFFFF;
 }
 
 .card-text{
-width: 133px;
-height: 8px;
+width: 8.313rem;
+height: 0.5rem;
 font-family: 'Roboto';
 font-style: normal;
 font-weight: 400;
-font-size: 8px;
+font-size: 0.5rem;
 line-height: 102%;
 letter-spacing: 0.101562px;
 color: #FFFFFF;
 }
 
 .card{
-    width: 140px;
+    width: 8.75rem;
     height: 30vh;
     background: linear-gradient(0deg, #E3C3C2, #E3C3C2), #FFFBFE;
     box-shadow: 0px 0.40625px 0.8125px rgba(0, 0, 0, 0.3), 0px 0.8125px 2.4375px 0.8125px rgba(0, 0, 0, 0.15);
