--- a/styles/parciales/_index.scss
+++ b/styles/parciales/_index.scss
@@ -1,19 +1,19 @@
 // Index//
 .portada{   
     position: absolute;
-    width: 328px;
-    height: 70vh;
-    margin-left: 16px;
-    margin-top: 72px;
-    border-radius: 4px;
+    width: 20.5rem;
+    height: 31rem;
+    margin-left: 1rem;
+    margin-top: 4.5rem;
+    border-radius: 0.25rem;
 }
 
 .subtitulo{
     position: absolute;
-    width: 360px;
-    height: 48px;
-    margin-left: 0px;
-    margin-top: 584px;
+    width: 22.5rem;
+    height: 3rem;
+    margin-left: 0rem;
+    margin-top: 36.5rem;
     background: #A9C3B4;
 }
 
@@ -21,26 +21,26 @@
 
 .productos_index{
     position: absolute;
-    margin-top:628px;
-    margin-left: 8px;
-    margin-right: 8px;
-    max-width: 328px;
+    margin-top:39.25rem;
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
+    width: 100%;
 }
 
 .prim_ver{
     position: absolute;
-width: 328px;
-height: 48px;
-padding: 20px;
+width: 100%;
+height: 3rem;
+padding: 1.25rem;
 font-family: 'Montserrat';
 font-style: normal;
 font-weight: 400;
-font-size: 20px;
-line-height: 24px;
+font-size: 2rem;
+line-height: 1.5rem;
 display: flex;
 align-items: center;
 text-align: center;
 justify-content: center;
-color:#FFFF;
+color:black;
 
 }
