--- a/styles/parciales/_index.scss
+++ b/styles/parciales/_index.scss
@@ -10,9 +10,8 @@
 
 .subtitulo{
     position: absolute;
-    width: 22.5rem;
+    width: 100%;
     height: 3rem;
-    margin-left: 0rem;
     margin-top: 36.5rem;
     background: #A9C3B4;
 }
