--- a/styles/main.css
+++ b/styles/main.css
@@ -16,7 +16,7 @@ nav {
 }
 
 #logo {
-  width: 7.125rem;
+  width: 7rem;
   height: 2.749rem;
   margin-left: 7.688rem;
   margin-top: 0.375rem;
@@ -78,9 +78,8 @@ nav {
 
 .subtitulo {
   position: absolute;
-  width: 22.5rem;
+  width: 100%;
   height: 3rem;
-  margin-left: 0rem;
   margin-top: 36.5rem;
   background: #A9C3B4;
 }
