--- a/styles/main.css
+++ b/styles/main.css
@@ -112,7 +112,7 @@ nav {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  color: black;
+  color: #FFFF;
 }
 
 .filtro {
