--- a/styles/parciales/_index.scss
+++ b/styles/parciales/_index.scss
@@ -4,6 +4,7 @@
     width: 20.5rem;
     height: 31rem;
     margin-left: 1rem;
+    margin-right: 1rem;
     margin-top: 4.5rem;
     border-radius: 0.25rem;
 }
