--- a/styles/main.css
+++ b/styles/main.css
@@ -7,8 +7,9 @@
 
 nav {
   position: absolute;
-  width: 100%;
+  width: 22.5rem;
   height: 3.5rem;
+  margin-right: 0rem;
   margin-left: 0rem;
   background-color: linear-gradient(0deg, #FFFFFF, #FFFFFF), #FFF9F2;
   -webkit-box-shadow: 0px 0.87379px 1.74757px rgba(0, 0, 0, 0.3), 0px 1.74757px 5.24272px 1.74757px rgba(0, 0, 0, 0.15);
@@ -19,6 +20,7 @@ nav {
   width: 7rem;
   height: 2.749rem;
   margin-left: 7.688rem;
+  margin-right: 7.688rem;
   margin-top: 0.375rem;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
@@ -64,6 +66,7 @@ nav {
   height: 20vh;
   margin-left: 0px;
   margin-top: 0px;
+  margin-right: 0rem;
   border-radius: 4.88px;
 }
 
@@ -72,6 +75,7 @@ nav {
   width: 20.5rem;
   height: 31rem;
   margin-left: 1rem;
+  margin-right: 1rem;
   margin-top: 4.5rem;
   border-radius: 0.25rem;
 }
