--- a/styles/parciales/_generals.scss
+++ b/styles/parciales/_generals.scss
@@ -6,8 +6,9 @@
 
 nav{
     position: absolute;
-    width: 100%;
+    width: 22.5rem;
     height: 3.5rem;
+    margin-right: 0rem;
     margin-left: 0rem;
     background-color: linear-gradient(0deg, #FFFFFF, #FFFFFF), #FFF9F2;
     box-shadow: 0px 0.873786px 1.74757px rgba(0, 0, 0, 0.3), 0px 1.74757px 5.24272px 1.74757px rgba(0, 0, 0, 0.15);
@@ -17,6 +18,7 @@ nav{
     width: 7rem;
     height: 2.749rem;
     margin-left: 7.688rem;
+    margin-right: 7.688rem;
     margin-top: 0.375rem;
     justify-content: center;
 }    
@@ -71,6 +73,7 @@ color: #FFFFFF;
     height: 20vh;
     margin-left: 0px;
     margin-top: 0px;
+    margin-right: 0rem;
     border-radius: 4.88px;
 }
 
