--- a/styles/parciales/_index.scss
+++ b/styles/parciales/_index.scss
@@ -14,6 +14,8 @@
     width: 100%;
     height: 3rem;
     margin-top: 36.5rem;
+    margin-right: 0rem;
+    padding: 0rem;
     background: #A9C3B4;
 }
 
