--- a/styles/main.css
+++ b/styles/main.css
@@ -7,7 +7,7 @@
 
 nav {
   position: absolute;
-  width: 22.5rem;
+  width: 100%;
   height: 3.5rem;
   margin-right: 0rem;
   margin-left: 0rem;
@@ -85,6 +85,8 @@ nav {
   width: 100%;
   height: 3rem;
   margin-top: 36.5rem;
+  margin-right: 0rem;
+  padding: 0rem;
   background: #A9C3B4;
 }
 
