--- a/styles/parciales/_generals.scss
+++ b/styles/parciales/_generals.scss
@@ -6,7 +6,7 @@
 
 nav{
     position: absolute;
-    width: 22.5rem;
+    width: 100%;
     height: 3.5rem;
     margin-right: 0rem;
     margin-left: 0rem;
