--- a/styles/parciales/_generals.scss
+++ b/styles/parciales/_generals.scss
@@ -19,7 +19,7 @@ nav{
     height: 2.749rem;
     margin-left: 7.688rem;
     margin-right: 7.688rem;
-    margin-top: 0.375rem;
+    margin-top:-2.625rem;
     justify-content: center;
 }    
 
@@ -37,7 +37,7 @@ nav{
 
 
 .card-title{
-    width: 8.313rem;
+    width: 100%;
 height: 0.5rem;
 font-family: 'Roboto';
 font-style: normal;
@@ -50,23 +50,24 @@ color: #FFFFFF;
 }
 
 .card-text{
-width: 8.313rem;
+width: 100%;
 height: 0.5rem;
 font-family: 'Roboto';
 font-style: normal;
 font-weight: 400;
 font-size: 0.5rem;
-line-height: 102%;
 letter-spacing: 0.101562px;
 color: #FFFFFF;
 }
 
 .card{
-    width: 8.75rem;
+    width: 100%;
     height: 30vh;
     background: linear-gradient(0deg, #E3C3C2, #E3C3C2), #FFFBFE;
     box-shadow: 0px 0.40625px 0.8125px rgba(0, 0, 0, 0.3), 0px 0.8125px 2.4375px 0.8125px rgba(0, 0, 0, 0.15);
     border-radius: 4.875px;
+    margin-right: 0.5rem;
+    margin-left: 0rem;
 }
 .card-img-top{
     width: 100%;
