--- a/styles/main.css
+++ b/styles/main.css
@@ -73,7 +73,7 @@ nav {
 
 .portada {
   position: absolute;
-  width: 20.5rem;
+  width: 100%;
   height: 31rem;
   margin-left: 1rem;
   margin-right: 1rem;
