--- a/styles/parciales/_index.scss
+++ b/styles/parciales/_index.scss
@@ -1,7 +1,7 @@
 // Index//
 .portada{   
     position: absolute;
-    width: 20.5rem;
+    width: 100%;
     height: 31rem;
     margin-left: 1rem;
     margin-right: 1rem;
