--- a/styles/parciales/_generals.scss
+++ b/styles/parciales/_generals.scss
@@ -19,7 +19,7 @@ nav{
     height: 2.749rem;
     margin-left: 7.688rem;
     margin-right: 7.688rem;
-    margin-top:-2.625rem;
+    // margin-top:-2.625rem;
     justify-content: center;
 }    
 
