--- a/styles/main.css
+++ b/styles/main.css
@@ -21,6 +21,7 @@ nav {
   height: 2.749rem;
   margin-left: 7.688rem;
   margin-right: 7.688rem;
+  margin-top: 0.375rem;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
