--- a/styles/parciales/_generals.scss
+++ b/styles/parciales/_generals.scss
@@ -17,7 +17,7 @@ nav{
 #logo{
     width: 7rem;
     height: 2.749rem;
-    margin-left: 7.688rem;
+    // margin-left: 7.688rem;
     margin-right: 7.688rem;
     margin-top:0.375rem;
     justify-content: center;
