--- a/styles/main.css
+++ b/styles/main.css
@@ -5,6 +5,10 @@
           box-sizing: border-box;
 }
 
+main {
+  margin-bottom: 1rem;
+}
+
 nav {
   position: absolute;
   width: 100%;
@@ -19,7 +23,7 @@ nav {
 #logo {
   width: 7rem;
   height: 2.749rem;
-  margin-right: 7.688rem;
+  margin-right: 8rem;
   margin-top: 0.375rem;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
@@ -119,6 +123,117 @@ nav {
       -ms-flex-pack: center;
           justify-content: center;
   color: #FFFF;
+}
+
+.title {
+  background-color: #E3C3C2;
+  width: 100%;
+  height: 56px;
+  margin-left: 0px;
+  margin-top: 55px;
+}
+
+.venta_wpp {
+  position: absolute;
+  width: 328px;
+  height: 48px;
+  margin-left: 16px;
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 24px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  color: #FFFF;
+}
+
+.info_general {
+  margin-top: 30px;
+  display: block;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column wrap;
+          flex-flow: column wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-left: 10px;
+}
+
+.info_title {
+  display: block;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row wrap;
+          flex-flow: row wrap;
+}
+
+.info_compra {
+  display: block;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column wrap;
+          flex-flow: column wrap;
+}
+
+.compra_txt {
+  width: 328px;
+  height: 56px;
+  margin-left: 16px;
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 18px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: #000000;
+}
+
+.btn_wpp {
+  width: 328px;
+  height: 48px;
+  margin-left: 16px;
+  background: #A9C3B4;
+  border-radius: 100px;
+}
+
+.wpp_txt {
+  color: #FFFFFF;
+  width: 68px;
+  height: 20px;
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 20px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  letter-spacing: 0.1px;
+  margin-right: 1.5rem;
+}
+
+.wpp_img {
+  margin-left: 8.54%;
+  margin-right: 8.54%;
 }
 
 .filtro {
