--- a/styles/parciales/_generals.scss
+++ b/styles/parciales/_generals.scss
@@ -3,7 +3,9 @@
     margin: 0;
     box-sizing: border-box;
 }
-
+main{
+    margin-bottom: 1rem;
+}
 nav{
     position: absolute;
     width: 100%;
@@ -17,24 +19,10 @@ nav{
 #logo{
     width: 7rem;
     height: 2.749rem;
-    // margin-left: 7.688rem;
-    margin-right: 7.688rem;
+    margin-right: 8rem;
     margin-top:0.375rem;
     justify-content: center;
 }    
-
-// .title{
-//     background-color: #E3C3C2;
-//     position: absolute;
-//     width: 360px;
-//     height: 56px;
-//     margin-left: 0px;
-// top: 96px;
-// text-align: center;
-// justify-content: center;
-// }
-
-
 
 .card-title{
     width: 100%;
