--- a/styles/parciales/_index.scss
+++ b/styles/parciales/_index.scss
@@ -24,8 +24,9 @@
 .productos_index{
     position: absolute;
     margin-top:39.25rem;
-    margin-left: 0.5rem;
+    margin-left: 0rem;
     margin-right: 0.5rem;
+    margin-bottom: 0.5rem;
     width: 100%;
 }
 
