--- a/styles/main.css
+++ b/styles/main.css
@@ -97,8 +97,9 @@ nav {
 .productos_index {
   position: absolute;
   margin-top: 39.25rem;
-  margin-left: 0.5rem;
+  margin-left: 0rem;
   margin-right: 0.5rem;
+  margin-bottom: 0.5rem;
   width: 100%;
 }
 
@@ -134,26 +135,22 @@ nav {
 }
 
 .venta_wpp {
-  position: absolute;
-  width: 328px;
   height: 48px;
-  margin-left: 16px;
   font-family: 'Montserrat';
   font-style: normal;
   font-weight: 400;
   font-size: 20px;
   line-height: 24px;
+  color: #FFFF;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  text-align: center;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  color: #FFFF;
 }
 
 .info_general {
@@ -207,7 +204,7 @@ nav {
 }
 
 .btn_wpp {
-  width: 328px;
+  width: 90%;
   height: 48px;
   margin-left: 16px;
   background: #A9C3B4;
@@ -234,6 +231,68 @@ nav {
 .wpp_img {
   margin-left: 8.54%;
   margin-right: 8.54%;
+}
+
+.footer_compra {
+  margin-top: 130px;
+}
+
+.footer_img {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row wrap;
+          flex-flow: row wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.footer_red {
+  padding: 17.48px;
+}
+
+.footer_p {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column wrap;
+          flex-flow: column wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  height: 56px;
+  background: #FFFFFF;
+  margin-left: 1rem;
+  margin-top: 2rem;
+}
+
+.footer_txt {
+  width: 100%;
+  height: 40px;
+  margin-left: 20px;
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14px;
+  color: #000000;
+}
+
+.footer_c {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-left: 1rem;
+  margin-right: 0rem;
 }
 
 .filtro {
