--- a/styles/parciales/_comoComprar.scss
+++ b/styles/parciales/_comoComprar.scss
@@ -7,20 +7,16 @@
 }
 
 .venta_wpp{
-    position: absolute;
-    width: 328px;
     height: 48px;
-    margin-left: 16px;
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 400;
     font-size: 20px;
     line-height: 24px;
+    color: #FFFF;
     display: flex;
     align-items: center;
-    text-align: center;
     justify-content: center;
-    color: #FFFF;
 }  
 
 .info_general{
@@ -57,7 +53,7 @@ color: #000000;
 }
 
 .btn_wpp{
-width: 328px;
+width: 90%;
 height: 48px;
 margin-left: 16px;
 background: #A9C3B4;
@@ -82,4 +78,48 @@ margin-right: 1.5rem;
 .wpp_img {
     margin-left: 8.54%;
 margin-right: 8.54%;
+}
+
+.footer_compra{
+    margin-top: 130px;
+}
+
+.footer_img{
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+}
+.footer_red{
+    padding: 17.48px;
+}
+
+.footer_p{
+    display: flex;
+    flex-flow: column wrap;
+    align-items: center;
+    width: 100%;
+    height: 56px;
+background: #FFFFFF;
+margin-left: 1rem;
+margin-top: 2rem;
+}
+
+.footer_txt{
+    width: 100%;
+height: 40px;
+margin-left: 20px;
+font-family: 'Roboto';
+font-style: normal;
+font-weight: 400;
+font-size: 12px;
+line-height: 14px;
+color: #000000;
+
+}
+
+.footer_c{
+    align-items: center;
+    justify-content: center;
+    margin-left: 1rem;
+    margin-right: 0rem;
 }
