--- a/styles/main.css
+++ b/styles/main.css
@@ -135,6 +135,7 @@ nav {
 }
 
 .venta_wpp {
+  width: 100%;
   height: 48px;
   font-family: 'Montserrat';
   font-style: normal;
@@ -186,7 +187,7 @@ nav {
 }
 
 .compra_txt {
-  width: 328px;
+  width: 100%;
   height: 56px;
   margin-left: 16px;
   font-family: 'Roboto';
@@ -213,7 +214,7 @@ nav {
 
 .wpp_txt {
   color: #FFFFFF;
-  width: 68px;
+  width: 100%;
   height: 20px;
   font-family: 'Roboto';
   font-style: normal;
