--- a/styles/parciales/_comoComprar.scss
+++ b/styles/parciales/_comoComprar.scss
@@ -7,6 +7,7 @@
 }
 
 .venta_wpp{
+    width: 100%;
     height: 48px;
     font-family: 'Montserrat';
     font-style: normal;
@@ -39,7 +40,7 @@ margin-left: 10px;
 }
 
 .compra_txt{
-width: 328px;
+width: 100%;
 height: 56px;
 margin-left: 16px;
 font-family: 'Roboto';
@@ -62,7 +63,7 @@ border-radius: 100px;
 
 .wpp_txt{
     color: #FFFFFF;
-    width: 68px;
+    width: 100%;
 height: 20px;
 font-family: 'Roboto';
 font-style: normal;
