--- a/styles/parciales/_index.scss
+++ b/styles/parciales/_index.scss
@@ -20,7 +20,9 @@
 }
 
 
-
+.card_index{
+    background: linear-gradient(0deg, #E3C3C2, #E3C3C2), #FFFBFE;
+}
 .productos_index{
     position: absolute;
     margin-top:39.25rem;
