--- a/styles/parciales/_products.scss
+++ b/styles/parciales/_products.scss
@@ -3,7 +3,7 @@
 height: 40px;
 margin-left: 16px;
 padding: 10px;
-margin-top: 16px;
+margin-top: 5rem;
 box-shadow: 0px 4px 8px 3px rgba(0, 0, 0, 0.15), 0px 1px 3px rgba(0, 0, 0, 0.3);
 border-radius: 16px;
 background: linear-gradient(0deg, #FFF9F2, #FFF9F2), #FFF9F2;
@@ -14,4 +14,8 @@ flex-flow: row wrap;
 text-align: center;
 align-items: center;
 align-content: center;
+}
+
+.card_products{
+    background: linear-gradient(0deg, #A9C3B4, #A9C3B4), #FFFBFE;
 }
