--- a/styles/parciales/_products.scss
+++ b/styles/parciales/_products.scss
@@ -19,3 +19,10 @@ align-content: center;
 .card_products{
     background: linear-gradient(0deg, #A9C3B4, #A9C3B4), #FFFBFE;
 }
+
+.products{
+    margin-left: 0rem;
+    margin-right: 0.5rem;
+    margin-bottom: 0.5rem;
+    width: 100%;   
+}
