Estilos detalles productos

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -2,3 +2,4 @@
 @import "../styles/parciales/index";
 @import "../styles/parciales/comoComprar";
 @import "../styles/parciales/products";
+@import "../styles/parciales/_products_details"
