--- a/styles/main.css
+++ b/styles/main.css
@@ -5,12 +5,7 @@
           box-sizing: border-box;
 }
 
-main {
-  margin-bottom: 1rem;
-}
-
 nav {
-  position: absolute;
   width: 100%;
   height: 3.5rem;
   margin-right: 0rem;
@@ -72,8 +67,68 @@ nav {
   border-radius: 4.88px;
 }
 
+.footer_img {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row wrap;
+          flex-flow: row wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.footer_red {
+  padding: 17.48px;
+}
+
+.footer_p {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column wrap;
+          flex-flow: column wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  height: 56px;
+  background: #FFFFFF;
+  margin-left: 1rem;
+}
+
+.footer_txt {
+  width: 80%;
+  height: 40px;
+  margin-left: 20px;
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14px;
+  color: #000000;
+}
+
+.footer_c {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-left: 1rem;
+  margin-right: 0rem;
+}
+
+.nav-link {
+  color: #A9C3B4;
+}
+
 .portada {
-  position: absolute;
   width: 90%;
   height: 31rem;
   margin-left: 1rem;
@@ -83,10 +138,9 @@ nav {
 }
 
 .subtitulo {
-  position: absolute;
   width: 100%;
   height: 3rem;
-  margin-top: 36.5rem;
+  margin-top: 1rem;
   margin-right: 0rem;
   padding: 0rem;
   background: #A9C3B4;
@@ -98,8 +152,7 @@ nav {
 }
 
 .productos_index {
-  position: absolute;
-  margin-top: 39.25rem;
+  margin-top: 1rem;
   margin-left: 0rem;
   margin-right: 0.5rem;
   margin-bottom: 0.5rem;
@@ -107,7 +160,6 @@ nav {
 }
 
 .prim_ver {
-  position: absolute;
   width: 100%;
   height: 3rem;
   padding: 1.25rem;
@@ -235,68 +287,6 @@ nav {
 .wpp_img {
   margin-left: 8.54%;
   margin-right: 8.54%;
-}
-
-.footer_compra {
-  margin-top: 130px;
-}
-
-.footer_img {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: row wrap;
-          flex-flow: row wrap;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-.footer_red {
-  padding: 17.48px;
-}
-
-.footer_p {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: column wrap;
-          flex-flow: column wrap;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  width: 100%;
-  height: 56px;
-  background: #FFFFFF;
-  margin-left: 1rem;
-  margin-top: 2rem;
-}
-
-.footer_txt {
-  width: 80%;
-  height: 40px;
-  margin-left: 20px;
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 14px;
-  color: #000000;
-}
-
-.footer_c {
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  margin-left: 1rem;
-  margin-right: 0rem;
 }
 
 .filtro {
