--- a/styles/parciales/_comoComprar.scss
+++ b/styles/parciales/_comoComprar.scss
@@ -81,46 +81,7 @@ margin-right: 1.5rem;
 margin-right: 8.54%;
 }
 
-.footer_compra{
-    margin-top: 130px;
-}
+// .footer_compra{
+//     margin-top: 130px;
+// }
 
-.footer_img{
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
-}
-.footer_red{
-    padding: 17.48px;
-}
-
-.footer_p{
-    display: flex;
-    flex-flow: column wrap;
-    align-items: center;
-    width: 100%;
-    height: 56px;
-background: #FFFFFF;
-margin-left: 1rem;
-margin-top: 2rem;
-}
-
-.footer_txt{
-    width: 80%;
-height: 40px;
-margin-left: 20px;
-font-family: 'Roboto';
-font-style: normal;
-font-weight: 400;
-font-size: 12px;
-line-height: 14px;
-color: #000000;
-
-}
-
-.footer_c{
-    align-items: center;
-    justify-content: center;
-    margin-left: 1rem;
-    margin-right: 0rem;
-}
