--- a/styles/parciales/_comoComprar.scss
+++ b/styles/parciales/_comoComprar.scss
@@ -59,6 +59,7 @@ height: 48px;
 margin-left: 16px;
 background: #A9C3B4;
 border-radius: 100px;
+margin-bottom: 10rem;
 }
 
 .wpp_txt{
@@ -80,8 +81,3 @@ margin-right: 1.5rem;
     margin-left: 8.54%;
 margin-right: 8.54%;
 }
-
-// .footer_compra{
-//     margin-top: 130px;
-// }
-
