--- a/styles/main.css
+++ b/styles/main.css
@@ -15,6 +15,14 @@ nav {
           box-shadow: 0px 0.87379px 1.74757px rgba(0, 0, 0, 0.3), 0px 1.74757px 5.24272px 1.74757px rgba(0, 0, 0, 0.15);
 }
 
+.nav-link {
+  color: #A9C3B4;
+}
+
+.nav-item {
+  padding: 1rem;
+}
+
 #logo {
   width: 7rem;
   height: 2.749rem;
@@ -122,10 +130,6 @@ nav {
           justify-content: center;
   margin-left: 1rem;
   margin-right: 0rem;
-}
-
-.nav-link {
-  color: #A9C3B4;
 }
 
 .portada {
