--- a/styles/parciales/_generals.scss
+++ b/styles/parciales/_generals.scss
@@ -13,6 +13,14 @@ nav{
     box-shadow: 0px 0.873786px 1.74757px rgba(0, 0, 0, 0.3), 0px 1.74757px 5.24272px 1.74757px rgba(0, 0, 0, 0.15);
 }
 
+.nav-link{
+    color:#A9C3B4;
+}
+
+.nav-item{
+    padding: 1rem;
+}
+
 #logo{
     width: 7rem;
     height: 2.749rem;
@@ -101,6 +109,3 @@ nav{
     margin-right: 0rem;
 }
 
-.nav-link{
-    color:#A9C3B4;
-}
