--- a/styles/parciales/_products_details.scss
+++ b/styles/parciales/_products_details.scss
@@ -30,7 +30,7 @@ color: #000000;
 
 .product_description{
     width: 80%;
-height: 30px;
+// height: 30px;
 margin-left: 16px;
 font-family: 'Roboto';
 font-style:normal;
@@ -40,6 +40,8 @@ line-height: 23px;
 display: flex;
 align-items: center;
 color: #000000;
+margin-bottom: 0.5rem;
+margin-top: 0.5rem;
 }
 
 .precio{
