--- a/styles/main.css
+++ b/styles/main.css
@@ -368,7 +368,6 @@ nav {
 
 .product_description {
   width: 80%;
-  height: 30px;
   margin-left: 16px;
   font-family: 'Roboto';
   font-style: normal;
@@ -382,6 +381,8 @@ nav {
       -ms-flex-align: center;
           align-items: center;
   color: #000000;
+  margin-bottom: 0.5rem;
+  margin-top: 0.5rem;
 }
 
 .precio {
