--- a/styles/parciales/_comoComprar.scss
+++ b/styles/parciales/_comoComprar.scss
@@ -1,19 +1,19 @@
 .title{
     background-color: #E3C3C2;
     width: 100%;
-    height: 56px;
-    margin-left: 0px;
-    margin-top: 55px;
+    height: 3.5rem;
+    margin-left: 0rem;
+    margin-top: 3.438rem;
 }
 
 .venta_wpp{
     width: 100%;
-    height: 48px;
+    height: 3rem;
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 400;
-    font-size: 20px;
-    line-height: 24px;
+    font-size: 1.25rem;
+    line-height: 1.5rem;
     color: #FFFF;
     display: flex;
     align-items: center;
@@ -21,12 +21,12 @@
 }  
 
 .info_general{
-    margin-top: 30px;
+    margin-top: 1.875rem;
     display:block;
 flex-flow: column wrap;
 justify-content: center;
 align-items: center;
-margin-left: 10px;
+margin-left: 0.625rem;
 }
 
 .info_title{
@@ -41,13 +41,13 @@ margin-left: 10px;
 
 .compra_txt{
 width: 90%;
-height: 56px;
-margin-left: 16px;
+height: 3.5rem;
+margin-left: 1rem;
 font-family: 'Roboto';
 font-style: normal;
 font-weight: 400;
-font-size: 14px;
-line-height: 18px;
+font-size: 0.875rem;
+line-height: 1.125rem;
 display: flex;
 align-items: center;
 color: #000000;
@@ -55,25 +55,25 @@ color: #000000;
 
 .btn_wpp{
 width: 90%;
-height: 48px;
-margin-left: 16px;
+height: 3rem;
+margin-left: 1rem;
 background: #A9C3B4;
-border-radius: 100px;
+border-radius: 6.25rem;
 margin-bottom: 10rem;
 }
 
 .wpp_txt{
     color: #FFFFFF;
     width: 100%;
-height: 20px;
+height: 1.25rem;
 font-family: 'Roboto';
 font-style: normal;
 font-weight: 500;
-font-size: 14px;
-line-height: 20px;
+font-size: 0.875rem;
+line-height: 1.25rem;
 align-items: center;
 text-align: center;
-letter-spacing: 0.1px;
+letter-spacing: 0.006rem;
 margin-right: 1.5rem;
 }
 
