--- a/styles/parciales/_products.scss
+++ b/styles/parciales/_products.scss
@@ -1,13 +1,13 @@
 .filtro{
-    width: 158px;
-height: 40px;
-margin-left: 16px;
-padding: 10px;
+    width: 9.875rem;
+height: 2.5rem;
+margin-left: 1rem;
+padding: 0.625rem;
 margin-top: 5rem;
-box-shadow: 0px 4px 8px 3px rgba(0, 0, 0, 0.15), 0px 1px 3px rgba(0, 0, 0, 0.3);
-border-radius: 16px;
+box-shadow: 0rem 0.25rem 0.5rem 0.188rem rgba(0, 0, 0, 0.15), 04rem 0.063rem 0.188rem rgba(0, 0, 0, 0.3);
+border-radius: 1rem;
 background: linear-gradient(0deg, #FFF9F2, #FFF9F2), #FFF9F2;
-margin-bottom: 16px;
+margin-bottom: 1rem;
 
 display: flex;
 flex-flow: row wrap;
